--- a/src/options.html
+++ b/src/options.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head><title>DAX Extension Options</title>
+    <head><title>IBL Extension Options</title>
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/lumen/bootstrap.min.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" charset="utf-8">
         <script src="js/jquery.min.js"></script>
     </head>
     <body>
         <div id="menu" class="navbar navbar-default navbar-fixed-top">
-            <div class="navbar-header"><span class="navbar-brand">Options for DAX tracker</span></div>
+            <div class="navbar-header"><span class="navbar-brand">Options for IBL Logger</span></div>
             <div class="navbar-right">
             </div>
             <div id="status" class="alert alert-success"></div>
@@ -24,49 +24,36 @@
                             <legend>Whitelist labels</legend>
                             <p>Keep empty to allow all</p>
                             <label>Labels:</label> (Comma separated)<br/>
-                            <input type="text" size="60" id="whitelist" placeholder="prev_page_type,page_type"/>
+                            <input type="text" size="60" id="whitelist" placeholder="id, purchased"/>
                         </fieldset>
                         <fieldset>
                             <legend>Filter requests</legend>
                             <h4>Whitelist</h4>
                             <p>Don't show requests that <strong>don't have</strong> the following label with a value. Leave empty to process all requests.</p>
-                            <input type="text" size="40" id="whitelist_label" placeholder="action_name"/>
-                            <input type="text" size="40" id="whitelist_value" placeholder="page-load"/>
+                            <input type="text" size="40" id="whitelist_label" placeholder="label"/>
+                            <input type="text" size="40" id="whitelist_value" placeholder="value"/>
 
                             <h4>Blacklist</h4>
                             <p>Don't show requests that <strong>have</strong> the following label with the following value.</p>
-                            <input type="text" size="40" id="blacklist_label" placeholder="ns_type"/>
-                            <input type="text" size="40" id="blacklist_value" placeholder="hidden"/>
+                            <input type="text" size="40" id="blacklist_label" placeholder="label"/>
+                            <input type="text" size="40" id="blacklist_value" placeholder="value"/>
                         </fieldset>
                     </div>
                 </div>
 
                 <div class="col-md-6">
                     <div id="styling">
-                        <!--
-                        <fieldset>
-                            <legend>How to show the popup</legend>
-                            <p>
-                            <select id="popup_type">
-                                <option value="normal">Normal</option>
-                                <option value="popup">Popup</option>
-                                <option value="panel">Panel</option>
-                                <option value="detached_panel">Detached panel</option>
-                            </select>
-                            </p>
-                        </fieldset>
-                        -->
                         <fieldset>
                             <legend>Path filtering</legend>
-                            <p>Paths to listen to in the requests, if empty all requests will be picked-up. Valid values are: bbc, test, int, nkdata, and stage.</p><p>To have multiple values please comma-separate them. <br/>To show all the requests use *.</p> 
+                            <p>Paths to listen to in the requests, if empty all requests will be picked-up.</p><p>To have multiple values please comma-separate them. <br/>To show all the requests use *.</p>
                             <br/>
-                            http://sa.bbc.co.uk/bbc/<input id="path" type="text" name="path" size="12" value="bbc"/>/*
+                            http://ibl.api.bbc.co.uk/<input id="path" type="text" name="path" size="12" value="bbc"/>/*
                         </fieldset>
                         <fieldset>
-                            <legend>How to display labels</legend>
-                            <p><input id="alphabetically_checkbox" type="checkbox"/> Order labels alphabetically</p> 
+                            <legend>How to display Requests</legend>
+                            <p><input id="alphabetically_checkbox" type="checkbox"/> Order labels alphabetically</p>
                             <br/>
-                            <p><input id="highlightpageviews_checkbox" type="checkbox"/> Highlight page views - highlights requests without ns_type = hidden</p> 
+                            <p><input id="ignore_options" type="checkbox"/> Ignore requests with method of OPTIONS</p>
                         </fieldset>
                         <button class="btn btn-default" id="save">Save</button>
                     </div>
