--- a/src/popup.html
+++ b/src/popup.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
-        <title>iStats log</title>
+        <title>IBL log</title>
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/lumen/bootstrap.min.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="css/bootstrap-switch.min.css" type="text/css" media="screen" charset="utf-8">
         <script src="js/jquery.min.js"></script>
